samples/_failures_safe/1761215771_d61f6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fd284dc.c: In function ‘main’:
./samples/SAFE/__tmp_9fd284dc.c:168:5: error: expected expression at end of input
  168 |     if (scanf("%d", &
      |     ^~
./samples/SAFE/__tmp_9fd284dc.c:168:5: error: expected declaration or statement at end of input
